crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_publicz_gen_1.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa PUBLICz\"####)"
---
[
    Token {
        data: "DOCTYPEa PUBLICz",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
